; ModuleID = '/home/carl/AnghaBench/jq/src/decNumber/extr_decNumber.c_decNumberSetBCD.c'
source_filename = "/home/carl/AnghaBench/jq/src/decNumber/extr_decNumber.c_decNumberSetBCD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64* }

@DECDPUN = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @decNumberSetBCD(%struct.TYPE_4__* %0, i64* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i64* %1, i64** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  %12 = load i64*, i64** %11, align 8
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @D2U(i32 %15)
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i64, i64* %12, i64 %17
  %19 = getelementptr inbounds i64, i64* %18, i64 -1
  store i64* %19, i64** %7, align 8
  %20 = load i64*, i64** %5, align 8
  store i64* %20, i64** %8, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i64 @MSUDIGITS(i32 %21)
  store i64 %22, i64* %9, align 8
  br label %23

23:                                               ; preds = %49, %3
  %24 = load i64*, i64** %7, align 8
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 1
  %27 = load i64*, i64** %26, align 8
  %28 = icmp uge i64* %24, %27
  br i1 %28, label %29, label %52

29:                                               ; preds = %23
  %30 = load i64*, i64** %7, align 8
  store i64 0, i64* %30, align 8
  br label %31

31:                                               ; preds = %42, %29
  %32 = load i64, i64* %9, align 8
  %33 = icmp sgt i64 %32, 0
  br i1 %33, label %34, label %47

34:                                               ; preds = %31
  %35 = load i64*, i64** %7, align 8
  %36 = load i64, i64* %35, align 8
  %37 = call i64 @X10(i64 %36)
  %38 = load i64*, i64** %8, align 8
  %39 = load i64, i64* %38, align 8
  %40 = add nsw i64 %37, %39
  %41 = load i64*, i64** %7, align 8
  store i64 %40, i64* %41, align 8
  br label %42

42:                                               ; preds = %34
  %43 = load i64*, i64** %8, align 8
  %44 = getelementptr inbounds i64, i64* %43, i32 1
  store i64* %44, i64** %8, align 8
  %45 = load i64, i64* %9, align 8
  %46 = add nsw i64 %45, -1
  store i64 %46, i64* %9, align 8
  br label %31

47:                                               ; preds = %31
  %48 = load i64, i64* @DECDPUN, align 8
  store i64 %48, i64* %9, align 8
  br label %49

49:                                               ; preds = %47
  %50 = load i64*, i64** %7, align 8
  %51 = getelementptr inbounds i64, i64* %50, i32 -1
  store i64* %51, i64** %7, align 8
  br label %23

52:                                               ; preds = %23
  %53 = load i32, i32* %6, align 4
  %54 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %55 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %54, i32 0, i32 0
  store i32 %53, i32* %55, align 8
  %56 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  ret %struct.TYPE_4__* %56
}

declare dso_local i32 @D2U(i32) #1

declare dso_local i64 @MSUDIGITS(i32) #1

declare dso_local i64 @X10(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
